Cursor Pointer with href in Anchors with NG-Click: http://stackoverflow.com/questions/10931315/how-to-preventdefault-on-anchor-tags http://stackoverflow.com/questions/18896859/change-the-mouse-pointer-on-ngclick

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -86,9 +86,6 @@ a.navbar-brand {
   width: 72px;
   cursor: pointer;
 }
-.thumbnail > .caption > a {
-	cursor: pointer;
-}
 
 /**
  * Alerts
